--- a/TaskCalendar/app/src/main/res/layout/task_item.xml
+++ b/TaskCalendar/app/src/main/res/layout/task_item.xml
@@ -15,6 +15,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:onClick="editTask"
         card_view:cardCornerRadius="8dp"
         card_view:layout_constraintBottom_toBottomOf="parent"
         card_view:layout_constraintEnd_toEndOf="parent"
@@ -38,11 +39,11 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
+                android:buttonTint="@color/colorPrimary"
                 android:checked="false"
                 android:onClick="completeTask"
                 android:scaleX="1.50"
                 android:scaleY="1.50"
-                android:buttonTint="@color/colorPrimary"
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 card_view:layout_constraintEnd_toEndOf="parent"
                 card_view:layout_constraintTop_toTopOf="parent" />
@@ -55,9 +56,9 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
                 android:text="TextView"
+                android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:textColor="#000000"
                 card_view:layout_constraintBottom_toTopOf="@+id/textViewDate"
                 card_view:layout_constraintEnd_toStartOf="@+id/checkBox"
                 card_view:layout_constraintStart_toStartOf="parent"
