--- a/TaskCalendar/app/src/main/res/menu/add_task_menu.xml
+++ b/TaskCalendar/app/src/main/res/menu/add_task_menu.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/ConfirmButton"
-        android:icon="@android:drawable/ic_input_add"
+        android:icon="@drawable/ic_white_tick_android"
         android:title=""
         app:showAsAction="always" />
 </menu>
