Add "Sort by Date" Option

--- a/TaskCalendar/app/src/main/res/layout/activity_main.xml
+++ b/TaskCalendar/app/src/main/res/layout/activity_main.xml
@@ -10,38 +10,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/EventToolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_toStartOf="@id/NewEventButton"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:title="@string/event_toolbar_title">
-
-        </android.support.v7.widget.Toolbar>
-
-        <ImageButton
-            android:id="@+id/NewEventButton"
-            android:layout_width="?android:attr/actionBarSize"
-            android:layout_height="?android:attr/actionBarSize"
-            android:layout_alignParentEnd="true"
-            android:background="@color/colorPrimary"
-            android:contentDescription="@string/add_event_button_description"
-            app:srcCompat="@android:drawable/ic_menu_add" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0">
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/TaskToolbar"
@@ -50,10 +19,43 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_toStartOf="@id/NewTaskButton"
-            android:background="?attr/colorPrimary"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:title="@string/task_toolbar_title" />
+            android:background="@color/colorPrimary"
+            android:minHeight="?android:attr/actionBarSize"
+            app:title="@string/task_toolbar_title"
+            app:titleTextColor="@android:color/white" />
+
+        <TextView
+            android:id="@+id/SortDateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_marginEnd="8dp"
+            android:layout_toStartOf="@id/SortSwitch"
+            android:fontFamily="sans-serif"
+            android:gravity="center"
+            android:text="@string/switch_text_1"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
+
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/SortSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_toStartOf="@id/SortImpTextView"
+            android:layout_marginEnd="8dp"
+            android:background="@color/colorPrimary"
+            android:checked="false"
+            android:theme="@style/SCBSwitch" />
+
+        <TextView
+            android:id="@+id/SortImpTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="?android:attr/actionBarSize"
+            android:layout_marginEnd="16dp"
+            android:layout_toStartOf="@id/NewTaskButton"
+            android:gravity="center"
+            android:text="@string/switch_text_2"
+            android:textColor="@android:color/white"
+            android:textSize="18sp" />
 
         <ImageButton
             android:id="@+id/NewTaskButton"
@@ -63,6 +65,7 @@
             android:background="@color/colorPrimary"
             android:contentDescription="@string/add_task_button_description"
             android:onClick="newTask"
+            android:tint="@android:color/white"
             app:srcCompat="@android:drawable/ic_menu_add" />
 
         <ListView
