--- a/TaskCalendar/app/src/main/res/values/colors.xml
+++ b/TaskCalendar/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="blue">#0000FF</color>
+    <color name="red">#FF0000</color>
+    <color name="green">#00FF00</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="darkGreen">#00B050</color>
+    <color name="black">#000000</color>
 </resources>
