--- a/TaskCalendar/app/src/main/res/values/styles.xml
+++ b/TaskCalendar/app/src/main/res/values/styles.xml
@@ -8,4 +8,17 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="SCBSwitch" parent="Theme.AppCompat.Light">
+        <!-- active thumb & track color (30% transparency) -->
+        <item name="colorControlActivated">#fff1f1f1</item>
+
+        <!-- inactive thumb color -->
+        <item name="colorSwitchThumbNormal">#fff1f1f1
+        </item>
+
+        <!-- inactive track color (30% transparency) -->
+        <item name="android:colorForeground">#ff221f1f
+        </item>
+    </style>
+
 </resources>
