--- a/TaskCalendar/app/src/main/res/layout/activity_main.xml
+++ b/TaskCalendar/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/MainLayout"
@@ -10,64 +10,88 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/TaskToolbar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_toStartOf="@id/NewTaskButton"
+        android:layout_height="?android:attr/actionBarSize"
         android:background="@color/colorPrimary"
         android:minHeight="?android:attr/actionBarSize"
-        app:title="@string/task_toolbar_title"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:titleTextColor="@android:color/white" />
+
+    <TextView
+        android:id="@+id/ToolbarTitleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_marginStart="16dp"
+        android:fontFamily="sans-serif"
+        android:gravity="center"
+        android:text="@string/task_toolbar_title"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/SortDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="?android:attr/actionBarSize"
-        android:layout_marginEnd="8dp"
-        android:layout_toStartOf="@id/SortSwitch"
+        android:layout_marginStart="16dp"
         android:fontFamily="sans-serif"
         android:gravity="center"
         android:text="@string/switch_text_1"
         android:textColor="@android:color/white"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/SortSwitch"
+        app:layout_constraintStart_toEndOf="@+id/ToolbarTitleTextView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.SwitchCompat
         android:id="@+id/SortSwitch"
         android:layout_width="wrap_content"
         android:layout_height="?android:attr/actionBarSize"
         android:layout_marginEnd="8dp"
-        android:layout_toStartOf="@id/SortImpTextView"
+        android:layout_marginStart="8dp"
         android:background="@color/colorPrimary"
         android:checked="false"
-        android:theme="@style/SCBSwitch" />
+        android:theme="@style/SCBSwitch"
+        app:layout_constraintEnd_toStartOf="@+id/SortImpTextView"
+        app:layout_constraintStart_toEndOf="@+id/SortDateTextView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/SortImpTextView"
         android:layout_width="wrap_content"
         android:layout_height="?android:attr/actionBarSize"
         android:layout_marginEnd="16dp"
-        android:layout_toStartOf="@id/NewTaskButton"
         android:gravity="center"
         android:text="@string/switch_text_2"
         android:textColor="@android:color/white"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/NewTaskButton"
+        app:layout_constraintStart_toEndOf="@+id/SortSwitch"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/NewTaskButton"
         android:layout_width="?android:attr/actionBarSize"
         android:layout_height="?android:attr/actionBarSize"
-        android:layout_alignParentEnd="true"
         android:background="@color/colorPrimary"
         android:contentDescription="@string/add_task_button_description"
         android:onClick="newTask"
         android:tint="@android:color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/ic_menu_add" />
 
     <ListView
         android:id="@+id/TaskList"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_below="@+id/TaskToolbar" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/TaskToolbar" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
